# python-profiling

./: e1.py  e1_1.py  e1_2.py  e1_3.py  e1_4.py  e1_5.py  e2.prof  e2.py  e2_1.py  e2_2.py  e3.prof  e3.py  e4.dot  e4.prof  e4.py  e5.py  e5_pyroscope.py  profile.html  pyproject.toml
